fdo#45081: We never registered the SAL_OBJECT_CHILDCLASSNAMEA window class

A crucial line of code that called RegisterClassExA() for that window
class had been deleted by accident in commit
cda4a293608514783d38d470799cfbf97b245cc6 "Code cleanup" in May 2011,
whoa. So apparently that window class is not needed for much except
embedded video in Impress?

Change-Id: I I19e70cefcf47aaf8a12a62539e0dacc5adb3c3b1
Signed-off-by: Norbert Thiebaud <nthiebaud@gmail.com>